...
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="0dp"
                android:gravity="end"
                android:orientation="horizontal">

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/coins"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:fontFamily="@font/open_sans"
                    android:textColor="@color/grey"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <com.airbnb.lottie.LottieAnimationView
                    android:id="@+id/coinAnimation"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentEnd="true"
...
                    app:lottie_rawRes="@raw/coin" />

            </LinearLayout>


            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/userProfileImage"
                android:layout_width="135dp"
                android:layout_height="135dp"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="10dp"
                app:civ_border_color="@color/grey"
                app:civ_border_width="2dp"
...
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.094"
                tools:srcCompat="@tools:sample/avatars" />

            <TextView
                android:id="@+id/userNameText"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:fontFamily="@font/open_sans"
                android:gravity="center_horizontal"
                android:text="@string/app_name"
                android:textSize="28sp"
...
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/userProfileImage"
                app:layout_constraintVertical_bias="0.203" />

            <TextView
                android:id="@+id/userEmailText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="0dp"
                android:fontFamily="@font/open_sans"
                app:layout_constraintBottom_toTopOf="@+id/editUserUnivInput"
                app:layout_constraintEnd_toEndOf="parent"
...
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.442">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editUserUnivEditText"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:inputType="text" />
            </com.google.android.material.textfield.TextInputLayout>


...
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.497"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editUserMajorinput">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editUserGpaEditText"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:inputType="numberDecimal" />
            </com.google.android.material.textfield.TextInputLayout>


...

        </LinearLayout>

    </ScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/confirmChangesButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_margin="5dp"
        android:contentDescription="@string/edit_profile_button_text"
        android:padding="20dp"
        android:src="@drawable/ic_baseline_done_24"
        android:visibility="gone" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/editProfileButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_margin="5dp"
        android:contentDescription="@string/edit_profile_button_text"
...
