...
        app:itemPaddingTop="5dp"
        app:itemPaddingBottom="5dp"
        app:labelVisibilityMode="unlabeled"
        app:menu="@menu/menu_navigation" />

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/settingsAnimation"
        android:layout_width="350dp"
        android:layout_height="371dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
...
        android:layout_marginRight="25dp"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:lottie_rawRes="@raw/settings" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/sign_out_button"
        style="@style/Widget.Material3.Button.OutlinedButton.Icon"
        android:layout_width="wrap_content"
        android:layout_height="58dp"
        android:layout_above="@+id/bottom_navigation"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
...
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/view_profile_button"
        style="@style/Widget.Material3.Button.OutlinedButton.Icon"
        android:layout_width="262dp"
        android:layout_height="58dp"
        android:layout_above="@+id/sign_out_button"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
...
        app:icon="@drawable/ic_baseline_person_24"
        app:iconGravity="start"
        app:iconPadding="10dp"
        app:iconSize="25dp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/dark_mode_button"
        style="@style/Widget.Material3.Button.OutlinedButton.Icon"
        android:layout_width="262dp"
        android:layout_height="58dp"
        android:layout_above="@+id/view_profile_button"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
...
